Update to melodic devel Compile with c++11

--- a/global_planner/CMakeLists.txt
+++ b/global_planner/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(global_planner)
 
+add_definitions(-std=c++11)
+
 find_package(catkin REQUIRED
   COMPONENTS
     angles
@@ -12,7 +14,8 @@ find_package(catkin REQUIRED
     nav_msgs
     pluginlib
     roscpp
-    tf
+    tf2_geometry_msgs
+    tf2_ros
 )
 
 generate_dynamic_reconfigure_options(
@@ -31,7 +34,7 @@ catkin_package(
     nav_msgs
     pluginlib
     roscpp
-    tf
+    tf2_ros
 )
 
 include_directories(
