--- a/global_planner/package.xml
+++ b/global_planner/package.xml
@@ -1,6 +1,8 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>global_planner</name>
-  <version>1.14.4</version>
+  <version>1.16.2</version>
   <description>
      A path planner library and node.
   </description>
@@ -10,29 +12,23 @@
   <license>BSD</license>
 
   <author>David Lu!!</author>
+  <url>http://wiki.ros.org/global_planner</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>angles</build_depend>
-  <build_depend>costmap_2d</build_depend>
-  <build_depend>dynamic_reconfigure</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_core</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>navfn</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>tf</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
 
-  <run_depend>costmap_2d</run_depend>
-  <run_depend>dynamic_reconfigure</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_core</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>navfn</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>tf</run_depend>
+  <depend>costmap_2d</depend>
+  <depend>dynamic_reconfigure</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_core</depend>
+  <depend>nav_msgs</depend>
+  <depend>navfn</depend>
+  <depend>pluginlib</depend>
+  <depend>roscpp</depend>
+  <depend>tf2_ros</depend>
+
   <export>
       <nav_core plugin="${prefix}/bgp_plugin.xml" />
   </export>
