--- a/eband_local_planner/package.xml
+++ b/eband_local_planner/package.xml
@@ -15,8 +15,7 @@
     <depend>nav_msgs</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
-    <depend>tf</depend>
-    <depend>tf_conversions</depend>
+    <depend>tf2_ros</depend>
 
     <export>
         <nav_core plugin="${prefix}/elp_plugin.xml"/>
