--- a/modular_move_base/package.xml
+++ b/modular_move_base/package.xml
@@ -21,6 +21,6 @@
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>std_srvs</depend>
-    <depend>tf</depend>
+    <depend>tf2_ros</depend>
 
 </package>
