--- a/eband_local_planner/package.xml
+++ b/eband_local_planner/package.xml
@@ -16,6 +16,7 @@
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>tf2_ros</depend>
+    <depend>tf2_geometry_msgs</depend>
 
     <export>
         <nav_core plugin="${prefix}/elp_plugin.xml"/>
