--- a/omni_pid_controller/package.xml
+++ b/omni_pid_controller/package.xml
@@ -1,6 +1,7 @@
-<package>
+<?xml version="1.0"?>
+<package format="2">
     <name>omni_pid_controller</name>
-    <version>0.0.1</version>
+    <version>0.1.0</version>
     <description>omni_pid_controller</description>
 
     <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
@@ -9,30 +10,16 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <build_depend>costmap_2d</build_depend>
-    <build_depend>geometry_msgs</build_depend>
-    <build_depend>nav_core</build_depend>
-    <build_depend>nav_msgs</build_depend>
-    <build_depend>navfn</build_depend>
-    <build_depend>pluginlib</build_depend>
-    <build_depend>roscpp</build_depend>
-    <build_depend>tf2_ros</build_depend>
-    <build_depend>ompl</build_depend>
-    <build_depend>rviz_visual_tools</build_depend>
-
-    <run_depend>costmap_2d</run_depend>
-    <run_depend>geometry_msgs</run_depend>
-    <run_depend>nav_core</run_depend>
-    <run_depend>nav_msgs</run_depend>
-    <run_depend>navfn</run_depend>
-    <run_depend>pluginlib</run_depend>
-    <run_depend>roscpp</run_depend>
-    <run_depend>tf2_ros</run_depend>
-    <run_depend>ompl</run_depend>
-    <run_depend>rviz_visual_tools</run_depend>
+    <depend>costmap_2d</depend>
+    <depend>geometry_msgs</depend>
+    <depend>nav_core</depend>
+    <depend>nav_msgs</depend>
+    <depend>pluginlib</depend>
+    <depend>roscpp</depend>
+    <depend>tf2_ros</depend>
+    <depend>rviz_visual_tools</depend>
 
     <export>
         <nav_core plugin="${prefix}/plugin.xml"/>
     </export>
-
 </package>
