--- a/omni_rrt_planner/CMakeLists.txt
+++ b/omni_rrt_planner/CMakeLists.txt
@@ -3,17 +3,15 @@ project(omni_rrt_planner)
 
 add_compile_options(-std=c++11)
 
-find_package(catkin REQUIRED
-  COMPONENTS
+find_package(catkin REQUIRED COMPONENTS
     costmap_2d
     geometry_msgs
     nav_core
-    navfn
     nav_msgs
     pluginlib
     roscpp
-    tf2_ros
     rviz_visual_tools
+    tf2_ros
 )
 
 find_package(Eigen3)
@@ -22,18 +20,19 @@ add_definitions(${EIGEN3_DEFINITIONS})
 find_package(OMPL REQUIRED)
 
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES omni_rrt_planner
-  CATKIN_DEPENDS
-    costmap_2d
-    geometry_msgs
-    nav_core
-    navfn
-    nav_msgs
-    pluginlib
-    roscpp
-    tf2_ros
-    rviz_visual_tools
+    INCLUDE_DIRS
+        include
+    LIBRARIES
+        ${PROJECT_NAME}
+    CATKIN_DEPENDS
+        costmap_2d
+        geometry_msgs
+        nav_core
+        nav_msgs
+        pluginlib
+        roscpp
+        rviz_visual_tools
+        tf2_ros
 )
 
 include_directories(SYSTEM
@@ -45,14 +44,17 @@ include_directories(
     include
 )
 
-add_library(omni_rrt_planner
-    include/omni_rrt_planner/omni_rrt_planner.h
-
-    src/omni_rrt_planner.cpp
+add_library(${PROJECT_NAME}
+    include/${PROJECT_NAME}/${PROJECT_NAME}.h
+    src/${PROJECT_NAME}.cpp
 )
-target_link_libraries(omni_rrt_planner ${catkin_LIBRARIES} ${OMPL_LIBRARIES})
 
-install(TARGETS omni_rrt_planner
+target_link_libraries(${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+    ${OMPL_LIBRARIES}
+)
+
+install(TARGETS ${PROJECT_NAME}
     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -63,6 +65,6 @@ install(DIRECTORY include/${PROJECT_NAME}/
     FILES_MATCHING PATTERN "*.h"
 )
 
-install(FILES omni_rrt_planner_plugin.xml
+install(FILES plugin.xml
     DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
