--- a/voxel_grid/CMakeLists.txt
+++ b/voxel_grid/CMakeLists.txt
@@ -3,39 +3,44 @@ project(voxel_grid)
 
 add_definitions(-std=c++11)
 
-find_package(catkin REQUIRED
-  COMPONENTS
+find_package(catkin REQUIRED COMPONENTS
     roscpp
 )
 
 catkin_package(
-  INCLUDE_DIRS
-    include
-  LIBRARIES
-    voxel_grid
-  CATKIN_DEPENDS
-    roscpp
+    INCLUDE_DIRS
+        include
+    LIBRARIES
+        ${PROJECT_NAME}
+    CATKIN_DEPENDS
+        roscpp
 )
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(voxel_grid src/voxel_grid.cpp)
-add_dependencies(voxel_grid ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(voxel_grid ${catkin_LIBRARIES})
+add_library(${PROJECT_NAME}
+    src/${PROJECT_NAME}.cpp
+)
 
-install(TARGETS voxel_grid
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+)
+
+install(TARGETS ${PROJECT_NAME}
+    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
 install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
 
 if(CATKIN_ENABLE_TESTING)
-  catkin_add_gtest(voxel_grid_tests test/voxel_grid_tests.cpp)
-  target_link_libraries(voxel_grid_tests
-    voxel_grid
-    ${catkin_LIBRARIES}
-  )
+    catkin_add_gtest(${PROJECT_NAME}_tests test/${PROJECT_NAME}_tests.cpp)
+    target_link_libraries(${PROJECT_NAME}_tests
+        ${PROJECT_NAME}
+        ${catkin_LIBRARIES}
+    )
 endif()
