--- a/eband_local_planner/package.xml
+++ b/eband_local_planner/package.xml
@@ -10,6 +10,7 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <depend>costmap_2d</depend>
+    <depend>control_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>nav_core</depend>
     <depend>nav_msgs</depend>
