--- a/global_planner/package.xml
+++ b/global_planner/package.xml
@@ -17,6 +17,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>tf2_geometry_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
 
   <depend>costmap_2d</depend>
   <depend>dynamic_reconfigure</depend>
