Replace complicated grid planning with a simple implementation of astar

--- a/astar_planner/CMakeLists.txt
+++ b/astar_planner/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(global_planner)
+project(astar_planner)
 
 add_definitions(-std=c++11)
 
@@ -7,13 +7,11 @@ find_package(catkin REQUIRED
   COMPONENTS
     costmap_2d
     cv_bridge
-    dynamic_reconfigure
     geometry_msgs
     nav_core
     nav_msgs
     pluginlib
     roscpp
-    tf2_geometry_msgs
     tf2_ros
 )
 
@@ -22,30 +20,24 @@ find_package(OpenCV 3 REQUIRED)
 find_package(Eigen3 REQUIRED)
 add_definitions(${EIGEN3_DEFINITIONS})
 
-generate_dynamic_reconfigure_options(
-    cfg/GlobalPlanner.cfg
-)
-
 catkin_package(
   INCLUDE_DIRS
       include
   LIBRARIES
       ${PROJECT_NAME}
   CATKIN_DEPENDS
-    costmap_2d
-    cv_bridge
-    dynamic_reconfigure
-    geometry_msgs
-    nav_core
-    nav_msgs
-    pluginlib
-    roscpp
-    tf2_ros
+      costmap_2d
+      cv_bridge
+      geometry_msgs
+      nav_core
+      nav_msgs
+      pluginlib
+      roscpp
+      tf2_ros
   DEPENDS
-    EIGEN3
-    OpenCV
+      EIGEN3
+      OpenCV
 )
-
 
 include_directories(SYSTEM
     ${catkin_INCLUDE_DIRS}
@@ -58,12 +50,8 @@ include_directories(
 
 add_library(${PROJECT_NAME}
     src/astar.cpp
-    src/dijkstra.cpp
-    src/gradient_path.cpp
-    src/grid_path.cpp
     src/orientation_filter.cpp
-    src/planner_core.cpp
-    src/quadratic_calculator.cpp
+    src/plugin.cpp
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -80,6 +68,6 @@ install(DIRECTORY include/${PROJECT_NAME}/
     PATTERN ".svn" EXCLUDE
 )
 
-install(FILES bgp_plugin.xml
+install(FILES plugin.xml
     DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
