--- a/eband_local_planner/CMakeLists.txt
+++ b/eband_local_planner/CMakeLists.txt
@@ -4,12 +4,10 @@ project(eband_local_planner)
 add_definitions(-std=c++11)
 
 find_package(catkin REQUIRED COMPONENTS
-    control_msgs
-    control_toolbox
     costmap_2d
     geometry_msgs
-    nav_core
     nav_msgs
+    navigation_interface
     pluginlib
     roscpp
     tf2_geometry_msgs
@@ -28,12 +26,10 @@ include_directories(SYSTEM
 
 catkin_package(
     CATKIN_DEPENDS
-        control_msgs
-        control_toolbox
         costmap_2d
         geometry_msgs
-        nav_core
         nav_msgs
+        navigation_interface
         pluginlib
         roscpp
         tf2_geometry_msgs
