--- a/eband_local_planner/package.xml
+++ b/eband_local_planner/package.xml
@@ -9,19 +9,17 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <depend>control_msgs</depend>
-    <depend>control_toolbox</depend>
     <depend>costmap_2d</depend>
     <depend>geometry_msgs</depend>
-    <depend>nav_core</depend>
     <depend>nav_msgs</depend>
+    <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
-    <depend>tf2_ros</depend>
     <depend>tf2_geometry_msgs</depend>
+    <depend>tf2_ros</depend>
 
     <export>
-        <nav_core plugin="${prefix}/elp_plugin.xml"/>
+        <navigation_interface plugin="${prefix}/elp_plugin.xml"/>
     </export>
 
 </package>
