--- a/omni_pid_controller/plugin.xml
+++ b/omni_pid_controller/plugin.xml
@@ -1,5 +1,5 @@
 <library path="lib/libomni_pid_controller">
-  <class name="omni_pid_controller/OmniPIDController" type="omni_pid_controller::OmniPIDController" base_class_type="nav_core::BaseLocalPlanner">
+  <class name="omni_pid_controller/OmniPIDController" type="omni_pid_controller::OmniPIDController" base_class_type="navigation_interface::BaseLocalPlanner">
     <description>
       RRT Local Planner
     </description>
