--- a/astar_planner/plugin.xml
+++ b/astar_planner/plugin.xml
@@ -1,5 +1,5 @@
 <library path="lib/libastar_planner">
-  <class name="astar_planner/AStarPlanner" type="astar_planner::AStarPlanner" base_class_type="nav_core::BaseGlobalPlanner">
+  <class name="astar_planner/AStarPlanner" type="astar_planner::AStarPlanner" base_class_type="navigation_interface::BaseGlobalPlanner">
     <description>
       A simple implementation of astar
     </description>
