--- a/modular_move_base/package.xml
+++ b/modular_move_base/package.xml
@@ -15,8 +15,8 @@
     <depend>geometry_msgs</depend>
     <depend>message_generation</depend>
     <depend>move_base_msgs</depend>
-    <depend>nav_core</depend>
     <depend>nav_msgs</depend>
+    <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>std_srvs</depend>
