Add missing templated function dependency causing builds to fail when in release mode, or when optimization is turned on.

--- a/modular_move_base/CMakeLists.txt
+++ b/modular_move_base/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
     roscpp
     std_srvs
     tf2_ros
+    tf2_geometry_msgs
 )
 find_package(Eigen3)
 add_definitions(${EIGEN3_DEFINITIONS})
