--- a/modular_move_base/package.xml
+++ b/modular_move_base/package.xml
@@ -21,6 +21,7 @@
     <depend>roscpp</depend>
     <depend>std_srvs</depend>
     <depend>tf2_ros</depend>
+    <depend>tf2_geometry_msgs</depend>
 
     <exec_depend>message_runtime</exec_depend>
 
