--- a/costmap_2d/package.xml
+++ b/costmap_2d/package.xml
@@ -11,10 +11,8 @@
 
     <build_depend>cmake_modules</build_depend>
     <build_depend>message_generation</build_depend>
-    <build_depend>tf2_sensor_msgs</build_depend>
 
     <depend>cv_bridge</depend>
-    <depend>dynamic_reconfigure</depend>
     <depend>geometry_msgs</depend>
     <depend>laser_geometry</depend>
     <depend>map_msgs</depend>
@@ -24,11 +22,10 @@
     <depend>roscpp</depend>
     <depend>sensor_msgs</depend>
     <depend>std_msgs</depend>
-    <depend>tf2</depend>
     <depend>tf2_ros</depend>
     <depend>visualization_msgs</depend>
-    <depend>voxel_grid</depend>
     <depend>tf2_geometry_msgs</depend>
+    <depend>tf2_sensor_msgs</depend>
 
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>rosconsole</exec_depend>
@@ -39,6 +36,6 @@
     <test_depend>rosunit</test_depend>
 
     <export>
-      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
+      <costmap_2d plugin="${prefix}/plugins.xml"/>
     </export>
 </package>
