Add hd_map package Add layers to gridmap

--- a/astar_planner/package.xml
+++ b/astar_planner/package.xml
@@ -19,6 +19,7 @@
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>tf2_ros</depend>
+    <depend>hd_map</depend>
 
     <test_depend>rosunit</test_depend>
 
