--- a/gridmap/package.xml
+++ b/gridmap/package.xml
@@ -26,6 +26,7 @@
     <depend>visualization_msgs</depend>
     <depend>tf2_geometry_msgs</depend>
     <depend>tf2_sensor_msgs</depend>
+    <depend>hd_map</depend>
 
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>rosconsole</exec_depend>
