--- a/map_manager/package.xml
+++ b/map_manager/package.xml
@@ -9,9 +9,10 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <depend>nav_msgs</depend>
     <depend>geometry_msgs</depend>
+    <depend>hd_map</depend>
     <depend>message_generation</depend>
+    <depend>nav_msgs</depend>
 
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>python-blinker</exec_depend>
