Update sonar sensor model to fast rasterize a triangle Fix astar to add goal pose Fix yaw calculation in move_base Fix yaw calculation in pure_pursuit_controller

--- a/gridmap/CMakeLists.txt
+++ b/gridmap/CMakeLists.txt
@@ -105,6 +105,9 @@ if(CATKIN_ENABLE_TESTING)
 
     catkin_add_gtest(unit_test test/unit_test.cpp)
     target_link_libraries(unit_test ${PROJECT_NAME} ${OpenCV_LIBRARIES})
+
+    catkin_add_gtest(test_raytrace test/test_raytrace.cpp)
+    target_link_libraries(test_raytrace ${PROJECT_NAME} ${OpenCV_LIBRARIES})
 endif()
 
 install(TARGETS
